--- a/src/pug/mixins/navbars/NavbarLittleSquirrel.pug
+++ b/src/pug/mixins/navbars/NavbarLittleSquirrel.pug
@@ -2,7 +2,7 @@ mixin NavbarLittleSquirrel
   nav.navbar.navbar-expand-lg.navbar-light.sticky-top.py-3.d-block(data-navbar-on-scroll)
     .container
       a.navbar-brand(href='index.html')
-        img(src=`${CWD}assets/img/gallery/logo.png`   height="45"  alt='logo')
+        img(src=`${CWD}assets/img/gallery/logo-n.png`   height="45"  alt='logo')
 
       button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon 
