--- a/src/pug/mixins/navbars/NavbarLittleSquirrel.pug
+++ b/src/pug/mixins/navbars/NavbarLittleSquirrel.pug
@@ -15,7 +15,7 @@ mixin NavbarLittleSquirrel
           li.nav-item.px-2
             a.nav-link(href=`${CWD}web-development.html`) Web Development
           li.nav-item.px-2
-            a.nav-link(href='#faq') Faq
+            a.nav-link(href=`${CWD}user-research.html`) User Research
 
         form.ps-lg-5
           a.btn.btn-primary.order-1.order-lg-0( href="#!") Sign Up
