--- a/src/pug/mixins/common/StudentFeedback.pug
+++ b/src/pug/mixins/common/StudentFeedback.pug
@@ -2,11 +2,16 @@ mixin StudentFeedback
   +Section.pt-0
     .row.h-100align-items-center
       .col-md-6.col-lg-6.h-100
-        img(src=`${CWD}assets/img/gallery/student-feedback.png` alt='...').w-100
+        .card.card-span.text-white.h-100
+          img(src=`${CWD}assets/img/gallery/student-feedback.png` alt='...').w-100
+          .card-body.px-xl-5.px-md-3.pt-0.pb-7
+            .d-flex.flex-column.align-items-center.bg-200(style="margin-top:-2.4rem;")
+              h5.mt-3.mb-0 Kimmie Vo
+              p.text-muted Junior Designer
       .col-md-12.col-lg-6.h-100
         h1.my-4 Successful Student
           br 
-          .text-primary Feedback
+          span.text-primary Feedback
         p Take courses from the world’s best instructors and universities. Courses include recorded auto-graded and peer-reviewed assignments, video lectures, and community discussion forums. When you complete a course, you’ll be eligible to receive a shareable electronic Course Certificate for a small fee.
         .mt-6
           h5.font-sans-serif.fw-bold.mb-3 The courses that Kimmie has taken
