--- a/src/pug/mixins/navbars/NavbarLittleSquirrel.pug
+++ b/src/pug/mixins/navbars/NavbarLittleSquirrel.pug
@@ -17,5 +17,7 @@ mixin NavbarLittleSquirrel
           li.nav-item.px-2
             a.nav-link(href=`${CWD}user-research.html`) User Research
 
-        form.ps-lg-5
+        form.d-flex
           a.btn.btn-primary.order-1.order-lg-0( href="#!") Sign Up
+          button.btn.btn-outline-light.ms-2(type='submit')
+            i.fas.fa-search.text-800
