--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -7,5 +7,5 @@ mixin HeroHeader
         .col-md-7.col-lg-6.text-md-start.text-center.py-8
           h4.fw-bold.font-sans-serif Become Master
           h1.fs-6.fs-xl-7.mb-5 Learn New Skills Online Find Best Courses
-          a.btn.btn-primary.me-2(href='#' role='button') Get A Quote
-          a.btn.btn-outline-secondary(href='#' role='button') Read more
+          a.btn.btn-primary.me-2(href='#!' role='button') Get A Quote
+          a.btn.btn-outline-secondary(href='#!' role='button') Read more
