--- a/src/pug/mixins/navbars/TopNav.pug
+++ b/src/pug/mixins/navbars/TopNav.pug
@@ -21,6 +21,6 @@ mixin TopNav
               i.fab.fa-instagram.text-900  
 
       .col-auto
-        p.my-2
-          i.fas.fa-envelope.me-3 
-          span vctung@outlook.com  
+        p.my-2.fs--1
+          i.fas.fa-envelope.me-3
+          a(href='mailto:vctung@outlook.com').text-900 vctung@outlook.com  
