--- a/src/pug/mixins/user-research/WebVsUxDesigner.pug
+++ b/src/pug/mixins/user-research/WebVsUxDesigner.pug
@@ -45,8 +45,8 @@ mixin WebVsUxDesigner
               | : Intermediate Level
             li.list-group-item.text-center
               img(src=`${CWD}assets/img/gallery/searching.png` width="78" alt='...') 
-              p.text-muted.mb-0.mt-4 Contact a customer support
-              p.text-info.mb-0 at vctung@outlook.com
+              p.text-muted.mb-0.mt-4 Contact a customer support at
+              a(href='mailto:vctung@outlook.com').text-info vctung@outlook.com
 
               
               
