--- a/src/pug/mixins/common/Footer.pug
+++ b/src/pug/mixins/common/Footer.pug
@@ -1,7 +1,7 @@
 mixin FooterList(...items)
   each item in items
     li.lh-lg
-      a.text-200.text-decoration-none(href='#!')
+      a.text-200(href='#!')
         =item
 
 mixin Footer 
@@ -27,17 +27,18 @@ mixin PreFooter
 
         p.text-light.my-4 
           i.fas.fa-map-marker-alt.me-3
-          span.text-light 1500 Treat Ave, Suite 200
+          span.text-light 1500 Treat Ave, Suite 200  &nbsp;
+          a(href='tel:+604-680-9785').text-light +604-680-9785
           br
           |San Francisco, CA 94110
        
         p.text-light 
           i.fas.fa-envelope.me-3 
-          span.text-light vctung@outlook.com
+          a(href='mailto:vctung@outlook.com').text-light vctung@outlook.com 
 
         p.text-light 
           i.fas.fa-phone-alt.me-3
-          span.text-light 1-800-800-2299 (Support)
+          a(href='tel:1-800-800-2299').text-light 1-800-800-2299 (Support)
 
       .col-6.col-sm-4.col-lg-2.mb-3.order-2.order-sm-1
         h5.lh-lg.fw-bold.mb-4.text-light.font-sans-serif Community 
