--- a/src/pug/mixins/common/Cta.pug
+++ b/src/pug/mixins/common/Cta.pug
@@ -1,8 +1,8 @@
 mixin Cta
   +Section
     .row.align-items-center
-      .col-md-6.col-lg-4
-        img(src=`${CWD}assets/img/gallery/cta.png` width="320" alt='cta').w-100
+      .col-md-6.col-lg-4.mb-5
+        img(src=`${CWD}assets/img/gallery/cta.png` width="280" alt='cta')
       .col-md-6.col-lg-5
         h5.text-primary.font-sans-serif.fw-bold Subscrible now
         h1.mb-5 Get every single
