--- a/src/pug/mixins/web-development/CourseCategory.pug
+++ b/src/pug/mixins/web-development/CourseCategory.pug
@@ -82,7 +82,7 @@ append variables
 mixin Courses(config)
   .col-md-4.mb-4
     .card.h-100
-      img(src=`${CWD}assets/img/gallery/${config.image}` alt='courses')
+      img.card-img-top.w-100(src=`${CWD}assets/img/gallery/${config.image}` alt='courses')
       .card-body
         h5.font-sans-serif.fw-bold!=config.title
         a.text-muted.fs--1.stretched-link(href='#!')!=config.text
