--- a/src/pug/mixins/common/StudentFeedback.pug
+++ b/src/pug/mixins/common/StudentFeedback.pug
@@ -1,14 +1,14 @@
 mixin StudentFeedback 
   +Section.pt-0
-    .row.h-100align-items-center
-      .col-md-6.col-lg-6.h-100
+    .row.h-100.align-items-center
+      .col-md-5.col-lg-6.h-100
         .card.card-span.text-white.h-100
-          img(src=`${CWD}assets/img/gallery/student-feedback.png` alt='...').w-100
+          img.w-100(src=`${CWD}assets/img/gallery/student-feedback.png` alt='...')
           .card-body.px-xl-5.px-md-3.pt-0.pb-7
             .d-flex.flex-column.align-items-center.bg-200(style="margin-top:-2.4rem;")
               h5.mt-3.mb-0 Kimmie Vo
               p.text-muted Junior Designer
-      .col-md-12.col-lg-6.h-100
+      .col-md-7.col-lg-6.h-100
         h1.my-4 Successful Student
           br 
           span.text-primary Feedback
