--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,6 +2,7 @@ extends layouts/LayoutTheme
 include mixins/common/Cta
 include mixins/common/Footer
 include mixins/common/StudentFeedback
+include mixins/common/Courses
 include mixins/home/landing/HeroHeader
 include mixins/home/landing/FunFacts
 include mixins/home/landing/FeaturedCourses
@@ -9,8 +10,6 @@ include mixins/home/landing/FunFactsTwo
 
 
 
-append variables
-  - var currentPage = 'index'
 
 prepend scripts
   
