--- a/src/pug/mixins/Variables.pug
+++ b/src/pug/mixins/Variables.pug
@@ -8,7 +8,4 @@ append variables
   - var grays = ['black', 1100, 1000, 900, 800, 700, 600, 500, 400, 300, 200, 100, 'white'];
   - var colorsAll = colors.concat(grays);
   - var footer = true;
-  -
-    var sitemap = {
-     
-    };
+  - var currentPage = 'index'
