--- a/src/pug/mixins/common/Cta.pug
+++ b/src/pug/mixins/common/Cta.pug
@@ -11,7 +11,7 @@ mixin Cta
         form.row.g-0.align-items-center     
           .col 
             .input-group-icon
-              input.form-control.form-little-squirrel-control(type='email' placeholder='Enter email address' aria-label='email')
+              input.form-control.form-little-squirrel-control(type='email' placeholder='Enter email ' aria-label='email')
               i.fas.fa-envelope.input-box-icon
           .col-auto
             button.btn.btn-primary.rounded-0(type='submit') Subscribe now
