--- a/src/pug/user-research.pug
+++ b/src/pug/user-research.pug
@@ -8,7 +8,7 @@ include mixins/user-research/WebVsUxDesigner
 
 
 append variables
-  - var currentPage = 'user-reseach'
+  - var currentPage = 'user-research'
 
 prepend scripts
   
