--- a/src/pug/web-development.pug
+++ b/src/pug/web-development.pug
@@ -1,6 +1,7 @@
 extends layouts/LayoutTheme
 include mixins/common/Cta
 include mixins/common/Footer
+include mixins/common/Courses
 include mixins/web-development/Header
 include mixins/web-development/CourseCategory 
 
